2010-04-01 Chris Morley

	* windows-vc2008: Add new Distribution folder and copy the external
	dlls and libs. Rewrite Windows installer for CMake VC2008 build.
	Uses more wild cards and so should be less prone to omissions.
	Folders windows-vc2005 and windowsOBF will be deleted, but have not
	been yet.	

2010-03-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp (SetCoordinates): Fix bug in SetCoordinates -- copy
	from externally-supplied double* to _c. Renamed parameter to avoid
	this problem. Fixes PR#2975148. Thanks to Paul Mortenson.

2010-03-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/base.h: Fix "unused parameter" warnings for GCC.

2010-03-26 Chris Morley

	* src/obmolecformat.cpp: Make --separate work with multiple input
	  molecules. Fixes #2961144

2010-03-23 Chris Morley
	
	Segregate the molecules that failed inchiwrite so that there are
	no failures using Samples.txt but all fail with SamplesFail.txt.
	Similarly with SamplesTechManFail.txt. The majority of failures
	are stereochemistry.
	 
	* include/openbabel/alias.h, src/alias.cpp: reorganize the error
	messages in ExpandAlias. 

	* src/formats/mdlformat.cpp: changes in description so GUI displays
	options better.

2010-03-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/obmolecformat.h, src/ops/unique.cpp: Fix
	unordered_map compile problems on Mac. Even Apple's GCC-4.2 has
	strange errors. For now, use regular std::map with APPLE_GCC.

2010-03-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/gaussformat.cpp: Use ESP charges if available from
	the calculation. Fixes PR#2871242 as suggested by Tapani Kinnunen.

2010-03-18 Chris Morley

	* src/atom.cpp (GetImplicitValence): add [H] as a special case.
	Cannot use IMPVAL [H] 1 in atomtyp.txt because there is an infinite
	loop. Fixes #2972355.

	* src/ops/unique.cpp: using std::tr1::unordered_map; is needed for 
	Visual Studio build also.
